--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Benaive
+title: BeNaive
 subtitle: OIer
 description: 
 keywords: ""
-author: Benaive
+author: BeNaive
 language: zh-CN
 
 # URL
