--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -689,9 +689,9 @@ cnzz_siteid:
 # AppID and AppKey are recommended to be the same as valine's for counter compatibility.
 # Do not enable both `valine.visitor` and `leancloud_visitors`.
 leancloud_visitors:
-  enable: false
-  app_id: # <your app id>
-  app_key: # <your app key>
+  enable: true
+  app_id: 0tEvrbyk0hBS1PmUC1K3Bjps-gzGzoHsz
+  app_key: JcuekQRIbOMzDgbMWrOVgHcC
   # Required for apps from CN region
   server_url: # <your server url>
   # Dependencies: https://github.com/theme-next/hexo-leancloud-counter-security
