--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -693,7 +693,7 @@ leancloud_visitors:
   app_id: 0tEvrbyk0hBS1PmUC1K3Bjps-gzGzoHsz
   app_key: JcuekQRIbOMzDgbMWrOVgHcC
   # Required for apps from CN region
-  server_url: # <your server url>
+  server_url: https://0tevrbyk.lc-cn-n1-shared.com
   # Dependencies: https://github.com/theme-next/hexo-leancloud-counter-security
   # If you don't care about security in leancloud counter and just want to use it directly
   # (without hexo-leancloud-counter-security plugin), set `security` to `false`.
@@ -711,12 +711,12 @@ firestore:
 # Show Views / Visitors of the website / page with busuanzi.
 # Get more information on http://ibruce.info/2015/04/04/busuanzi
 busuanzi_count:
-  enable: false
+  enable: true
   total_visitors: true
   total_visitors_icon: fa fa-user
   total_views: true
   total_views_icon: fa fa-eye
-  post_views: true
+  post_views: false
   post_views_icon: fa fa-eye
 
 
