--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -689,7 +689,7 @@ cnzz_siteid:
 # AppID and AppKey are recommended to be the same as valine's for counter compatibility.
 # Do not enable both `valine.visitor` and `leancloud_visitors`.
 leancloud_visitors:
-  enable: true
+  enable: false
   app_id: 0tEvrbyk0hBS1PmUC1K3Bjps-gzGzoHsz
   app_key: JcuekQRIbOMzDgbMWrOVgHcC
   # Required for apps from CN region
@@ -716,7 +716,7 @@ busuanzi_count:
   total_visitors_icon: fa fa-user
   total_views: true
   total_views_icon: fa fa-eye
-  post_views: false
+  post_views: true
   post_views_icon: fa fa-eye
 
 
